--- a/digit_recognition.ipynb
+++ b/digit_recognition.ipynb
@@ -21,6 +21,45 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "It is usually much faster to train a deep network on a graphical processing unit (GPU) than a computer's standard central processing unit (CPU). Before proceeding, select \"Change runtime type\" from the \"Runtime\" menu, and make sure a GPU option is selected from among the \"Hardware accelerator\" choices. Default values are fine for any other choices.\n",
+        "\n",
+        "Once you have done that, the code below should print \"cuda:0\". CUDA stands for Compute Unified Device Architecture. It is a low-level interface that PyTorch uses to run code on a GPU. If it says \"cpu\" then check your hardware accelerator and try again.\n",
+        "\n",
+        "*Run the code below to create a code reference to the GPU \"device\".*"
+      ],
+      "metadata": {
+        "id": "oegSbJgpHX6L"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "\n",
+        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+        "print(device)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pLprHsLqHZzH",
+        "outputId": "906db733-f8f8-4ff8-cca9-d47711dc8231"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cuda:0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "f3xs-nZyx5g3"
       },
@@ -32,14 +71,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "3PxLa0yCgwCw"
       },
       "outputs": [],
       "source": [
         "import numpy as np\n",
-        "import torch\n",
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
         "\n",
@@ -74,116 +112,24 @@
       "source": [
         "Digit recognition was the first thing convolutional networks were used for in the 1980s. The motivation was to automatically sort US mail by ZIP code. To help solve this problem, a set of 70,000 digit images was curated in the Modified National Institute of Standards and Technology (MNIST) dataset (https://en.wikipedia.org/wiki/MNIST_database).\n",
         "\n",
-        "You will now load the MNIST data and train a ConvolutionalNetwork with it. MNIST is one of the most popular machine learning datasets, so PyTorch knows where it is and will download it for you. The code below will also prepare training and testing datasets and corresponding \"DataLoader\" objects that provide batches of examples from these datasets.\n",
+        "You should now obtain the MNIST data so that you can use it to train the network. MNIST is one of the most popular machine learning datasets, so PyTorch knows where it is and will download it for you. The code below will also prepare training and testing subsets of the data and corresponding \"DataLoader\" objects that organize the examples in these datasets into \"batches\". The network will process one batch of examples at a time.\n",
         "\n",
         "*Run the code below to download and organize the data.*"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "I5815k83SL_3",
-        "outputId": "4f743f92-fd1e-4462-e4a9-8a60b51a99ef"
+        "id": "I5815k83SL_3"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to data/MNIST/raw/train-images-idx3-ubyte.gz\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 9912422/9912422 [00:00<00:00, 78382328.12it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting data/MNIST/raw/train-images-idx3-ubyte.gz to data/MNIST/raw\n",
-            "\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 28881/28881 [00:00<00:00, 112894402.45it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting data/MNIST/raw/train-labels-idx1-ubyte.gz to data/MNIST/raw\n",
-            "\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 1648877/1648877 [00:00<00:00, 79007155.96it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting data/MNIST/raw/t10k-images-idx3-ubyte.gz to data/MNIST/raw\n",
-            "\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 4542/4542 [00:00<00:00, 20729628.69it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting data/MNIST/raw/t10k-labels-idx1-ubyte.gz to data/MNIST/raw\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from torchvision import datasets, transforms\n",
         "\n",
         "directory = 'data' # the folder where the dataset will be saved on this server\n",
         "\n",
-        "# this object will convert images into the right form for input to the network\n",
+        "# this object will put images in the right form for input to the network\n",
         "transform = transforms.Compose([\n",
         "  transforms.ToTensor(),\n",
         "  transforms.Normalize((0.1307,), (0.3081,))\n",
@@ -195,10 +141,37 @@
         "\n",
         "batch_size = 1000 # the size of groups of examples that are used for gradient descent steps\n",
         "\n",
-        "#these objects will provide batches of examples from the datasets\n",
+        "#these \"loader\" objects will provide batches of examples from the datasets\n",
         "train_loader = torch.utils.data.DataLoader(train_set, batch_size=batch_size, shuffle=True)\n",
         "validation_loader = torch.utils.data.DataLoader(test_set, batch_size=batch_size, shuffle=True)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "You have defined the ConvolutionalNetwork class, but you still have to create an object of that class. A technical detail in using the network object is that the GPU has its own on-board memory, and the network must be moved to that memory in order to run efficiently.\n",
+        "\n",
+        "You will also need an \"optimizer\" object to update the network's parameters based on the gradient of the loss for each batch. Create an optimizer object of the SGD class (for \"stochastic gradient descent\") that comes with PyTorch's \"optim\" package. This code also sets the optimizer's \"learning rate\" parameter, which determines the size of gradient descent steps. If this is too big, the network may skip right over the best parameters and become worse with training.\n",
+        "\n",
+        "*Run the code below to create network and optimizer objects and move the network to the GPU.*"
+      ],
+      "metadata": {
+        "id": "TYckAzaKem7h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = ConvolutionalNetwork()\n",
+        "model.to(device) # move model to GPU\n",
+        "\n",
+        "optimizer = torch.optim.SGD(model.parameters(), lr=0.1) # lr is the learning rate"
+      ],
+      "metadata": {
+        "id": "gvToZBPffk60"
+      },
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -206,7 +179,7 @@
         "id": "HikKs3zNa-Qn"
       },
       "source": [
-        "You will now create a function that loops through all the batches of image/label examples in a dataset, runs them through the network, and keeps track of the average loss and accuracy in the process. If this function gets an optimizer object as a parameter, it will also perform backpropagation and a variation of gradient descent to update the parameters.   \n",
+        "You will now create a function that loops through all the batches of image/label examples in a given dataset, runs them through the network, and keeps track of the average loss and accuracy. This function can optionally receive your optimizer object as a parameter, in which case it will also perform backpropagation and gradient descent to update the parameters.   \n",
         "\n",
         "*Run the code below to create a function that passes a dataset through the network.*  "
       ]
@@ -217,29 +190,29 @@
         "def process_dataset(model, loader, optimizer=None):\n",
         "  \"\"\"\n",
         "  model: the deep network\n",
-        "  loader: the dataloader for the dataset to be processed\n",
-        "  optimizer: object that updates parameters\n",
+        "  loader: the dataloader of the dataset that is to be procesed\n",
+        "  optimizer: an object that updates the network's parameters\n",
         "  \"\"\"\n",
         "\n",
         "  # create lists of losses and accuracies for each batch in the dataset\n",
         "  losses = []\n",
         "  accuracies = []\n",
         "\n",
-        "  for inputs, labels in loader:\n",
-        "    print('.', end='') # prints a dot for every batch as a simple progress bar\n",
+        "  for inputs, labels in loader: # this is a loop through all the batches\n",
+        "    print('.', end='') # prints a dot for each batch (this serves as a progress bar)\n",
         "\n",
-        "    inputs = inputs.to(device)\n",
-        "    labels = labels.to(device)\n",
+        "    inputs = inputs.to(device) # move inputs to the GPU\n",
+        "    labels = labels.to(device) # move labels to the GPU\n",
         "    outputs = model(inputs) # run the inputs through the network\n",
-        "    loss = nn.CrossEntropyLoss()(outputs, labels) # calculate loss\n",
+        "    loss = nn.CrossEntropyLoss()(outputs, labels) # calculate the loss\n",
         "\n",
         "    if optimizer is not None:\n",
-        "      optimizer.zero_grad()\n",
-        "      loss.backward() # backpropagation\n",
-        "      optimizer.step() # gradient descent\n",
+        "      optimizer.zero_grad() # delete any gradients from previous steps\n",
+        "      loss.backward() # perform backpropagation to calculate new gradients\n",
+        "      optimizer.step() # perform gradient descent to improve parameters\n",
         "\n",
         "    # calculate the fraction of predictions in this batch that were correct\n",
-        "    _, predictions = torch.max(outputs, 1)\n",
+        "    _, predictions = torch.max(outputs, 1) # predicted digits are output neurons with highest values\n",
         "    fraction_correct = torch.sum(predictions == labels.data).item() / len(predictions)\n",
         "\n",
         "    # add this batch's loss and fraction-correct to the lists\n",
@@ -255,46 +228,17 @@
       "metadata": {
         "id": "slFiZTw_8cBE"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "TODO"
-      ],
-      "metadata": {
-        "id": "oegSbJgpHX6L"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-        "print(device)"
-      ],
-      "metadata": {
-        "id": "pLprHsLqHZzH",
-        "outputId": "ba8a79ca-677b-4f8a-9080-b39c25d03747",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "cuda:0\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "TODO"
+        "Now everything is ready to train the network. You are using a GPU, you have network and optimizer objects, you have downloaded the data and created data loaders to access it one batch at a time. You also have a function that runs all the batches in a dataset through the network, calculates the average loss and accuracy, and updates the parameters as needed.\n",
+        "\n",
+        "The code below runs several \"epochs\" (passes through the dataset) of training. After each epoch, the code runs the validation data through the model to find the validation loss. Recall that although optimization can only directly reduce the training loss, the validation loss is a better indication of how the network would perform with new examples.\n",
+        "\n",
+        "*Finally, run the code below to train the network for ten epochs. Note how loss and accuracy on the validation dataset change with each epoch.*"
       ],
       "metadata": {
         "id": "tjml2dfRIeaX"
@@ -302,40 +246,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3WCnfUumdGNq",
-        "outputId": "db0935c3-cc36-471c-8c6f-b58571973cde"
+        "outputId": "a102a622-f414-4fca-c4ac-50ccddb9e986"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/3\n",
-            "............................................................Training loss: 1.0323 accuracy: 0.6948\n",
-            "..........Validation loss: 0.3377 accuracy: 0.9077\n",
-            "Epoch 2/3\n",
-            "............................................................Training loss: 0.2763 accuracy: 0.9181\n",
-            "..........Validation loss: 0.2005 accuracy: 0.9405\n",
-            "Epoch 3/3\n",
-            "............................................................Training loss: 0.1870 accuracy: 0.9455\n",
-            "..........Validation loss: 0.1346 accuracy: 0.9604\n"
+            "Epoch 1/10\n",
+            "............................................................Training loss: 1.0770 accuracy: 0.7015\n",
+            "..........Validation loss: 0.2880 accuracy: 0.9150\n",
+            "Epoch 2/10\n",
+            "............................................................Training loss: 0.2719 accuracy: 0.9198\n",
+            "..........Validation loss: 0.1799 accuracy: 0.9475\n",
+            "Epoch 3/10\n",
+            "............................................................Training loss: 0.1802 accuracy: 0.9469\n",
+            "..........Validation loss: 0.1303 accuracy: 0.9599\n",
+            "Epoch 4/10\n",
+            "............................................................Training loss: 0.1381 accuracy: 0.9597\n",
+            "..........Validation loss: 0.0973 accuracy: 0.9709\n",
+            "Epoch 5/10\n",
+            "............................................................Training loss: 0.1161 accuracy: 0.9662\n",
+            "..........Validation loss: 0.0902 accuracy: 0.9720\n",
+            "Epoch 6/10\n",
+            "............................................................Training loss: 0.0985 accuracy: 0.9716\n",
+            "..........Validation loss: 0.0671 accuracy: 0.9792\n",
+            "Epoch 7/10\n",
+            "............................................................Training loss: 0.0845 accuracy: 0.9756\n",
+            "..........Validation loss: 0.0655 accuracy: 0.9787\n",
+            "Epoch 8/10\n",
+            "............................................................Training loss: 0.0753 accuracy: 0.9778\n",
+            "..........Validation loss: 0.0567 accuracy: 0.9815\n",
+            "Epoch 9/10\n",
+            "............................................................Training loss: 0.0694 accuracy: 0.9797\n",
+            "..........Validation loss: 0.0514 accuracy: 0.9843\n",
+            "Epoch 10/10\n",
+            "............................................................Training loss: 0.0611 accuracy: 0.9818\n",
+            "..........Validation loss: 0.0494 accuracy: 0.9843\n"
           ]
         }
       ],
       "source": [
-        "from torch import optim\n",
-        "\n",
-        "model = ConvolutionalNetwork()\n",
-        "model.to(device);\n",
-        "optimizer = optim.SGD(model.parameters(), lr=0.1)\n",
-        "\n",
-        "# train_model(model, optimizer, 3);\n",
-        "num_epochs = 3\n",
+        "num_epochs = 10\n",
         "for epoch in range(num_epochs):\n",
         "    print('Epoch {}/{}'.format(epoch+1, num_epochs))\n",
         "\n",
@@ -354,6 +312,7 @@
         "v0CMfJI4hQ76"
       ],
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
