--- a/pneumonia_detection.ipynb
+++ b/pneumonia_detection.ipynb
@@ -44,13 +44,13 @@
         "print(device)"
       ],
       "metadata": {
-        "id": "9JtaQgJXyaoB",
-        "outputId": "8ee35acb-54a1-4ce6-8a2b-2261a7bf731e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9JtaQgJXyaoB",
+        "outputId": "5cb37be4-2747-404d-a6ec-be3024067976"
       },
-      "execution_count": 1,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,28 +74,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 12,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "maBbdEx3et42",
-        "outputId": "d85ad55f-17c2-48e5-e53a-111d4e97094c"
+        "id": "maBbdEx3et42"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
-            "  warnings.warn(msg)\n",
-            "Downloading: \"https://download.pytorch.org/models/resnet50-0676ba61.pth\" to /root/.cache/torch/hub/checkpoints/resnet50-0676ba61.pth\n",
-            "100%|██████████| 97.8M/97.8M [00:01<00:00, 62.1MB/s]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "model = models.resnet50(pretrained=True)"
       ]
@@ -137,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 13,
       "metadata": {
         "id": "XUBp3JiPUZ1r"
       },
@@ -175,30 +158,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "t7QanaFCewkW",
-        "outputId": "0bab0178-bfc7-422e-a113-bf4215da898c"
+        "outputId": "90230c14-ed8e-4259-edb5-876c0c29d5da"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-09-25 17:00:06--  http://bptripp.com/Kermany-Chest-XRay-Data.zip\n",
+            "--2023-09-25 18:17:02--  http://bptripp.com/Kermany-Chest-XRay-Data.zip\n",
             "Resolving bptripp.com (bptripp.com)... 64.90.50.171\n",
             "Connecting to bptripp.com (bptripp.com)|64.90.50.171|:80... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1237670572 (1.2G) [application/zip]\n",
-            "Saving to: ‘Kermany-Chest-XRay-Data.zip’\n",
+            "Saving to: ‘Kermany-Chest-XRay-Data.zip.1’\n",
             "\n",
-            "Kermany-Chest-XRay- 100%[===================>]   1.15G  38.6MB/s    in 32s     \n",
+            "Kermany-Chest-XRay- 100%[===================>]   1.15G  38.7MB/s    in 33s     \n",
             "\n",
-            "2023-09-25 17:00:38 (37.4 MB/s) - ‘Kermany-Chest-XRay-Data.zip’ saved [1237670572/1237670572]\n",
-            "\n"
+            "2023-09-25 18:17:36 (35.2 MB/s) - ‘Kermany-Chest-XRay-Data.zip.1’ saved [1237670572/1237670572]\n",
+            "\n",
+            "replace __MACOSX/._chest_xray? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
           ]
         }
       ],
@@ -220,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 15,
       "metadata": {
         "id": "aMWKAyUumQ8R"
       },
@@ -236,7 +220,7 @@
         "# augmentation that helps the network get more out of limited training data.\n",
         "transform = transforms.Compose([\n",
         "        transforms.Resize((224,224)),\n",
-        "        transforms.RandomAffine(5, shear=5),\n",
+        "        transforms.RandomAffine(8, shear=8),\n",
         "        transforms.ToTensor(),\n",
         "        normalize\n",
         "    ])\n",
@@ -287,7 +271,7 @@
         "      optimizer.step() # perform gradient descent to improve parameters\n",
         "\n",
         "    # calculate the fraction of predictions in this batch that were correct\n",
-        "    predictions = outputs.argmax(dim=1, keepdim=True) # the predicted category corresponds to the output neurons with highest value\n",
+        "    predictions = outputs.argmax(dim=1) # the predicted category corresponds to the output neurons with highest value\n",
         "    fraction_correct = torch.sum(predictions == targets.data).item() / len(predictions)\n",
         "\n",
         "    # add this batch's loss and fraction-correct to the lists\n",
@@ -303,7 +287,7 @@
       "metadata": {
         "id": "F8U6QBm95qW6"
       },
-      "execution_count": 6,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -325,7 +309,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N5aq0g3vnD-r",
-        "outputId": "a67f8223-e507-4f07-ad4e-13170f20498d"
+        "outputId": "632eff06-00ac-4958-fc6a-c02007332953"
       },
       "outputs": [
         {
@@ -333,13 +317,13 @@
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "......................."
+            "."
           ]
         }
       ],
       "source": [
-        "# optimizer = optim.Adam(model.fc.parameters(), lr=0.005, weight_decay=1e-6)\n",
-        "optimizer = torch.optim.SGD(model.parameters(), lr=0.01)\n",
+        "# this optimizer implements a more complex variation of gradient descent\n",
+        "optimizer = optim.Adam(model.fc.parameters(), lr=0.005, weight_decay=1e-6)\n",
         "\n",
         "num_epochs = 5\n",
         "for epoch in range(num_epochs):\n",
