--- a/pneumonia_detection.ipynb
+++ b/pneumonia_detection.ipynb
@@ -48,15 +48,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9JtaQgJXyaoB",
-        "outputId": "5cb37be4-2747-404d-a6ec-be3024067976"
+        "outputId": "edbf3196-414d-476e-cd11-7d5f881beaff"
       },
-      "execution_count": 11,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "cpu\n"
+            "cuda:0\n"
           ]
         }
       ]
@@ -74,11 +74,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 2,
       "metadata": {
-        "id": "maBbdEx3et42"
+        "id": "maBbdEx3et42",
+        "outputId": "8b03ca2b-1513-47c9-9995-317a91e3066a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
+            "  warnings.warn(msg)\n"
+          ]
+        }
+      ],
       "source": [
         "model = models.resnet50(pretrained=True)"
       ]
@@ -96,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "SJ9yRX_8T9Kc"
       },
@@ -120,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 3,
       "metadata": {
         "id": "XUBp3JiPUZ1r"
       },
@@ -132,11 +147,11 @@
         "\n",
         "# replace final fully-connected layer with two new layers\n",
         "model.fc = nn.Sequential(\n",
-        "               nn.Linear(2048, 128),\n",
+        "               nn.Linear(2048, 64),\n",
         "               nn.ReLU(inplace=True),\n",
-        "               nn.Linear(128, 128),\n",
+        "               nn.Linear(64, 64),\n",
         "               nn.ReLU(inplace=True),\n",
-        "               nn.Linear(128, 2))\n",
+        "               nn.Linear(64, 2))\n",
         "\n",
         "model.to(device);"
       ]
@@ -158,31 +173,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "t7QanaFCewkW",
-        "outputId": "90230c14-ed8e-4259-edb5-876c0c29d5da"
+        "outputId": "2c25800b-e515-4e2f-baf6-463c10ee2271"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-09-25 18:17:02--  http://bptripp.com/Kermany-Chest-XRay-Data.zip\n",
+            "--2023-09-25 18:37:28--  http://bptripp.com/Kermany-Chest-XRay-Data.zip\n",
             "Resolving bptripp.com (bptripp.com)... 64.90.50.171\n",
             "Connecting to bptripp.com (bptripp.com)|64.90.50.171|:80... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1237670572 (1.2G) [application/zip]\n",
-            "Saving to: ‘Kermany-Chest-XRay-Data.zip.1’\n",
+            "Saving to: ‘Kermany-Chest-XRay-Data.zip’\n",
             "\n",
-            "Kermany-Chest-XRay- 100%[===================>]   1.15G  38.7MB/s    in 33s     \n",
+            "Kermany-Chest-XRay- 100%[===================>]   1.15G   106MB/s    in 50s     \n",
             "\n",
-            "2023-09-25 18:17:36 (35.2 MB/s) - ‘Kermany-Chest-XRay-Data.zip.1’ saved [1237670572/1237670572]\n",
+            "2023-09-25 18:38:18 (23.4 MB/s) - ‘Kermany-Chest-XRay-Data.zip’ saved [1237670572/1237670572]\n",
             "\n",
-            "replace __MACOSX/._chest_xray? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
+            "replace __MACOSX/._chest_xray? [y]es, [n]o, [A]ll, [N]one, [r]ename: A\n"
           ]
         }
       ],
@@ -204,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 5,
       "metadata": {
         "id": "aMWKAyUumQ8R"
       },
@@ -287,7 +302,7 @@
       "metadata": {
         "id": "F8U6QBm95qW6"
       },
-      "execution_count": 16,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -303,13 +318,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N5aq0g3vnD-r",
-        "outputId": "632eff06-00ac-4958-fc6a-c02007332953"
+        "outputId": "e85a467f-9822-4663-b102-2c79cf77d9e8"
       },
       "outputs": [
         {
@@ -317,7 +332,20 @@
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "."
+            "..................................................................................Training loss: 0.2383 accuracy: 0.9064\n",
+            "..........Validation loss: 0.4992 accuracy: 0.8266\n",
+            "Epoch 2/5\n",
+            "..................................................................................Training loss: 0.1662 accuracy: 0.9318\n",
+            "..........Validation loss: 0.4459 accuracy: 0.8313\n",
+            "Epoch 3/5\n",
+            "..................................................................................Training loss: 0.1589 accuracy: 0.9364\n",
+            "..........Validation loss: 0.5614 accuracy: 0.8016\n",
+            "Epoch 4/5\n",
+            "..................................................................................Training loss: 0.1634 accuracy: 0.9385\n",
+            "..........Validation loss: 0.3764 accuracy: 0.8641\n",
+            "Epoch 5/5\n",
+            "..................................................................................Training loss: 0.1521 accuracy: 0.9411\n",
+            "..........Validation loss: 0.7428 accuracy: 0.7344\n"
           ]
         }
       ],
