--- a/pneumonia_detection.ipynb
+++ b/pneumonia_detection.ipynb
@@ -48,7 +48,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9JtaQgJXyaoB",
-        "outputId": "edbf3196-414d-476e-cd11-7d5f881beaff"
+        "outputId": "30bfa684-227e-4aeb-c6a0-f7f6265a1dcf"
       },
       "execution_count": 1,
       "outputs": [
@@ -74,28 +74,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
-        "id": "maBbdEx3et42",
-        "outputId": "8b03ca2b-1513-47c9-9995-317a91e3066a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "maBbdEx3et42"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
-            "  warnings.warn(msg)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "model = models.resnet50(pretrained=True)"
+        "model = models.resnet50(weights=models.ResNet50_Weights.IMAGENET1K_V1)"
       ]
     },
     {
@@ -135,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "XUBp3JiPUZ1r"
       },
@@ -173,29 +158,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "t7QanaFCewkW",
-        "outputId": "2c25800b-e515-4e2f-baf6-463c10ee2271"
+        "outputId": "d5bfacf7-29cc-4bc2-e1e9-3184adba9e63"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-09-25 18:37:28--  http://bptripp.com/Kermany-Chest-XRay-Data.zip\n",
+            "--2023-09-25 18:58:23--  http://bptripp.com/Kermany-Chest-XRay-Data.zip\n",
             "Resolving bptripp.com (bptripp.com)... 64.90.50.171\n",
             "Connecting to bptripp.com (bptripp.com)|64.90.50.171|:80... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1237670572 (1.2G) [application/zip]\n",
-            "Saving to: ‘Kermany-Chest-XRay-Data.zip’\n",
+            "Saving to: ‘Kermany-Chest-XRay-Data.zip.1’\n",
             "\n",
-            "Kermany-Chest-XRay- 100%[===================>]   1.15G   106MB/s    in 50s     \n",
+            "Kermany-Chest-XRay- 100%[===================>]   1.15G  71.9MB/s    in 18s     \n",
             "\n",
-            "2023-09-25 18:38:18 (23.4 MB/s) - ‘Kermany-Chest-XRay-Data.zip’ saved [1237670572/1237670572]\n",
+            "2023-09-25 18:58:41 (66.9 MB/s) - ‘Kermany-Chest-XRay-Data.zip.1’ saved [1237670572/1237670572]\n",
             "\n",
             "replace __MACOSX/._chest_xray? [y]es, [n]o, [A]ll, [N]one, [r]ename: A\n"
           ]
@@ -219,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "id": "aMWKAyUumQ8R"
       },
@@ -302,7 +287,7 @@
       "metadata": {
         "id": "F8U6QBm95qW6"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -318,13 +303,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N5aq0g3vnD-r",
-        "outputId": "e85a467f-9822-4663-b102-2c79cf77d9e8"
+        "outputId": "5b51f0bb-533a-4d0c-ef53-690df717aa1b"
       },
       "outputs": [
         {
@@ -332,20 +317,20 @@
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "..................................................................................Training loss: 0.2383 accuracy: 0.9064\n",
-            "..........Validation loss: 0.4992 accuracy: 0.8266\n",
+            "..................................................................................Training loss: 0.2616 accuracy: 0.8929\n",
+            "..........Validation loss: 0.7176 accuracy: 0.7484\n",
             "Epoch 2/5\n",
-            "..................................................................................Training loss: 0.1662 accuracy: 0.9318\n",
-            "..........Validation loss: 0.4459 accuracy: 0.8313\n",
+            "..................................................................................Training loss: 0.1575 accuracy: 0.9354\n",
+            "..........Validation loss: 0.5707 accuracy: 0.8063\n",
             "Epoch 3/5\n",
-            "..................................................................................Training loss: 0.1589 accuracy: 0.9364\n",
-            "..........Validation loss: 0.5614 accuracy: 0.8016\n",
+            "..................................................................................Training loss: 0.1548 accuracy: 0.9396\n",
+            "..........Validation loss: 0.3417 accuracy: 0.8578\n",
             "Epoch 4/5\n",
-            "..................................................................................Training loss: 0.1634 accuracy: 0.9385\n",
-            "..........Validation loss: 0.3764 accuracy: 0.8641\n",
+            "..................................................................................Training loss: 0.1624 accuracy: 0.9333\n",
+            "..........Validation loss: 0.6229 accuracy: 0.7906\n",
             "Epoch 5/5\n",
-            "..................................................................................Training loss: 0.1521 accuracy: 0.9411\n",
-            "..........Validation loss: 0.7428 accuracy: 0.7344\n"
+            "..................................................................................Training loss: 0.1550 accuracy: 0.9421\n",
+            "..........Validation loss: 0.4000 accuracy: 0.8625\n"
           ]
         }
       ],
